--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ plugins {
 }
 
 group = 'com.mysite'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2'
 
 java {
+	sourceCompatibility = '17'
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
